--- a/src/importer.vcproj
+++ b/src/importer.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="MayaExporter"
+	Name="importer"
 	ProjectGUID="{9AE7461B-E8BC-4E15-A2D1-DFDFFD6CB9FE}"
-	RootNamespace="MayaExporter"
+	RootNamespace="importer"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="196613"
 	>
@@ -41,6 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="../libs/json"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
