bit more robust with undefined file extensions

--- a/src/importer.vcproj
+++ b/src/importer.vcproj
@@ -319,88 +319,148 @@
 	<References>
 	</References>
 	<Files>
-		<File
-			RelativePath=".\BinaryFileWriter.cpp"
+		<Filter
+			Name="Model"
 			>
-		</File>
-		<File
-			RelativePath=".\BinaryFileWriter.h"
+			<File
+				RelativePath=".\FloatMaterialParameter.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\FloatMaterialParameter.h"
+				>
+			</File>
+			<File
+				RelativePath=".\IMaterialParameter.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Material.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Material.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Model.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Model.h"
+				>
+			</File>
+			<File
+				RelativePath=".\SubMesh.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\SubMesh.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Vector2.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Vector3.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Vector3MaterialParameter.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Vector3MaterialParameter.h"
+				>
+			</File>
+			<File
+				RelativePath=".\VertexDefinition.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\VertexDefinition.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Serialization"
 			>
-		</File>
-		<File
-			RelativePath=".\FloatMaterialParameter.cpp"
+			<File
+				RelativePath=".\BinaryFileWriter.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\BinaryFileWriter.h"
+				>
+			</File>
+			<File
+				RelativePath=".\DefaultFileWriter.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\DefaultFileWriter.h"
+				>
+			</File>
+			<File
+				RelativePath=".\IFileWriter.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\IFileWriter.h"
+				>
+			</File>
+			<File
+				RelativePath=".\JSONFileWriter.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\JSONFileWriter.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Deserialization"
 			>
-		</File>
-		<File
-			RelativePath=".\FloatMaterialParameter.h"
+			<File
+				RelativePath=".\DefaultFileReader.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\DefaultFileReader.h"
+				>
+			</File>
+			<File
+				RelativePath=".\IFileReader.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\IFileReader.h"
+				>
+			</File>
+			<File
+				RelativePath=".\MayaReader.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MayaReader.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Utils"
 			>
-		</File>
-		<File
-			RelativePath=".\IFileWriter.hpp"
-			>
-		</File>
-		<File
-			RelativePath=".\IMaterialParameter.h"
-			>
-		</File>
-		<File
-			RelativePath=".\JSONFileWriter.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\JSONFileWriter.h"
-			>
-		</File>
+			<File
+				RelativePath=".\Extension.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Extension.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath=".\main.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\Material.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\Material.h"
-			>
-		</File>
-		<File
-			RelativePath=".\ModelFile.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\ModelFile.h"
-			>
-		</File>
-		<File
-			RelativePath=".\SubMesh.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\SubMesh.h"
-			>
-		</File>
-		<File
-			RelativePath=".\Vector2.h"
-			>
-		</File>
-		<File
-			RelativePath=".\Vector3.h"
-			>
-		</File>
-		<File
-			RelativePath=".\Vector3MaterialParameter.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\Vector3MaterialParameter.h"
-			>
-		</File>
-		<File
-			RelativePath=".\VertexDefinition.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\VertexDefinition.h"
 			>
 		</File>
 	</Files>
